# rust-tetris

./: .gitignore  .travis.yml  Cargo.toml  README.md  run.bat
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.run/: Build.run.xml  Run.run.xml
resources/conf/: game_conf.toml
rust_tetris_core/: Cargo.toml
rust_tetris_core/src/: board.rs  constants.rs  enums.rs  lib.rs  macros.rs  pieces.rs
rust_tetris_standard_game/: Cargo.toml
rust_tetris_standard_game/src/: app.rs  app_structs.rs  conf.rs  controller.rs  controller_structs.rs  drawer.rs  main.rs  types.rs  utils.rs
rust_tetris_ui_core/: Cargo.toml
rust_tetris_ui_core/src/: app_structs.rs  drawer.rs  lib.rs  utils.rs
scripts/: build  build.bat  build.ps1  run  run.bat  run.ps1
src/: app.rs  app_structs.rs  board.rs  controller.rs  drawer.rs  main.rs  pieces.rs  utils.rs
src/drawables/: border.rs  drawable_obj.rs  drawable_piece.rs  mod.rs  pause_overlay.rs  rectangle.rs  square.rs  text.rs
