[package]
name = "rust_tetris_standard_game"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
log = "0.4.11"
env_logger = "0.8.1"
rust_tetris_core = { path = "../rust_tetris_core" }
rust_tetris_ui_core = { path = "../rust_tetris_ui_core" }