[package]
name = "rust_tetris_standard_game"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
log = { version = "0.4.11", features = [
    "max_level_debug",
    "release_max_level_warn"
] }
env_logger = "0.8.1"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_plain = "0.3.0"
toml = "0.5.7"
rust_tetris_core = { path = "../rust_tetris_core" }
rust_tetris_ui_core = { path = "../rust_tetris_ui_core" }
winit = { version = "0.19", features = ["serde"] }
