[package]
name = "rust_tetris_ui_core"
version = "0.1.0"
authors = ["Davide Canton <davide.canton5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-opengl_graphics = "0.72.0"
piston2d-graphics = "0.36.0"
rust_tetris_core = { path = "../rust_tetris_core" }